--- a/bower.json
+++ b/bower.json
@@ -21,7 +21,9 @@
     "angular-resource": "^1.5.7",
     "jquery": "^3.0.0",
     "angular-ui-router": "^0.3.1",
-    "angular-xeditable": "^0.2.0"
+    "angular-xeditable": "^0.2.0",
+    "angular-socket-io": "^0.7.0",
+    "socket.io-client": "^1.4.8"
   },
   "resolutions": {
     "jquery": "^3.0.0"
