--- a/package.json
+++ b/package.json
@@ -17,11 +17,14 @@
     "angular-ui-bootstrap": "^1.3.3",
     "body-parser": "^1.15.2",
     "bower": "^1.7.9",
+    "dotenv": "^2.0.0",
     "ejs": "^2.4.2",
     "express": "^4.14.0",
     "mongoose": "^4.5.2",
     "morgan": "^1.7.0",
     "mysql": "^2.11.1",
+    "socket.io": "^1.4.8",
+    "socket.io-client": "^1.4.8",
     "uuid": "^2.0.2"
   }
 }
