--- a/bower.json
+++ b/bower.json
@@ -23,9 +23,11 @@
     "angular-ui-router": "^0.3.1",
     "angular-xeditable": "^0.2.0",
     "angular-socket-io": "^0.7.0",
-    "socket.io-client": "^1.4.8"
+    "socket.io-client": "^1.4.8",
+    "angular-uuid": "^0.1.0"
   },
   "resolutions": {
-    "jquery": "^3.0.0"
+    "jquery": "^3.0.0",
+    "angular": ">=1.4.0"
   }
 }
