--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
   },
   "license": "ISC",
   "dependencies": {
+    "angular": "^1.5.7",
     "angular-ui-bootstrap": "^1.3.3",
+    "angular-uuid": "0.0.2",
     "body-parser": "^1.15.2",
     "bower": "^1.7.9",
     "dotenv": "^2.0.0",
