working random gif and still pic

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "bower": "^1.7.9",
     "ejs": "^2.4.2",
     "express": "^4.14.0",
+    "gifsicle": "^3.0.3",
     "mongoose": "^4.5.2",
     "morgan": "^1.7.0",
     "mysql": "^2.11.1",
