--- a/bower.json
+++ b/bower.json
@@ -24,7 +24,9 @@
     "angular-xeditable": "^0.2.0",
     "angular-socket-io": "^0.7.0",
     "socket.io-client": "^1.4.8",
-    "angular-uuid": "^0.1.0"
+    "angular-uuid": "^0.1.0",
+    "angular-toastr": "^1.7.0",
+    "angular-animate": "^1.5.7"
   },
   "resolutions": {
     "jquery": "^3.0.0",
