--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "license": "ISC",
   "dependencies": {
+    "angular-countdown": "^1.2.1",
     "angular-ui-bootstrap": "^1.3.3",
     "body-parser": "^1.15.2",
     "bower": "^1.7.9",
