--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "mongoose": "^4.5.2",
     "morgan": "^1.7.0",
     "mysql": "^2.11.1",
+    "request": "^2.73.0",
     "socket.io": "^1.4.8",
     "socket.io-client": "^1.4.8",
     "uuid": "^2.0.2"
